# agricultura-hidricos

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  todo.md
etl/: extract.py  load.py  transform.py
figures/: .gitignore
nb/: 00_1-explorando-extracción.ipynb  00_2-explorando-data.ipynb  01_1-eda-agricultura.ipynb  01_2-eda-hidricos.ipynb
references/: diccionario-agricultura.md  diccionario-municipios.md  diccionario-recursos-hídricos.md
report/: reporte.md
scripts/: config.py
