[project]
name = "database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "contextily>=1.7.0",
    "duckdb>=1.4.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "jupyterlab>=4.5.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
]
